Grace/tests/gibbs/errors/t029.grace
// ERROR = P1002
def aString = "test"
print(aString[1)
